--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.1.3
 extraction==0.1.3
 feedparser==5.1.2
 html5lib==0.95
+lxml==3.0.1
 protobuf==2.4.1
 requests==0.14.2
 rethinkdb==1.2.6-1
